--- a/css/juego.css
+++ b/css/juego.css
@@ -124,6 +124,18 @@ transform: rotateX(180deg);
     background: #e7e7e7;
     border-radius: 50px;
 }
+.swal-button {
+    background-color: #ab2f52;
+    color: #fff;
+    border: none;
+    box-shadow: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 10px 24px;
+    margin: 0;
+    cursor: pointer;
+}
 @keyframes spin-sello{
 0%{
     transform: rotateX(0);
